# mimeo

./: .env.example  .gitignore  LICENSE  README.md  create_economists.md  cursor_chat_recording.md  main.py  pyproject.toml
.cursor/hooks/state/: continual-learning.json
output/kevin-murphy/: AGENTS.md  SKILL.md
output/kevin-murphy/references/: anti-patterns.md  frameworks.md  heuristics.md  mental-models.md  principles.md  quotes.md  sources.md
output/luis-garicano/: AGENTS.md  SKILL.md
output/luis-garicano/references/: anti-patterns.md  frameworks.md  heuristics.md  mental-models.md  principles.md  quotes.md  sources.md
output/thomas-sargent/: AGENTS.md  SKILL.md
output/thomas-sargent/references/: anti-patterns.md  frameworks.md  heuristics.md  mental-models.md  principles.md  quotes.md  sources.md
prompts/: cluster.md  critique.md  extract.md  synthesize_agents.md  synthesize_skill.md
spec/: design.md  intent.md  requirements.md  tasks.md
src/mimeo/: __init__.py  avatar.py  cli.py  config.py  critique.py  discovery.py  distill.py  identity.py  llm.py  parallel_client.py  pipeline.py  research.py  schemas.py  search.py  synthesize.py  verify.py  writers.py
src/mimeo/fetchers/: __init__.py  audio.py  dispatcher.py  web.py  youtube.py
steering/: coding-standards.md
tests/: conftest.py  test_avatar.py  test_cli.py  test_critique.py  test_discovery.py  test_distill.py  test_fetchers.py  test_identity.py  test_live.py  test_llm.py  test_offline.py  test_parallel_client.py  test_pipeline.py  test_research.py  test_search.py  test_synthesize.py  test_verify.py
